test/Fail/Erasure-Lambda.err
Erasure-Lambda.agda:9.29-30: error: [VariableIsErased]
Variable y is declared erased, so it cannot be used here
when checking that the expression y has type _B_7
